fdo#61251 prefer exact matches before case guess matching

Change-Id: I3a7badf063110e78d53859381efba32837aa71bb